@@ -19,7 +19,6 @@ package org.apache.lucene.luke.models.search;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 import org.apache.lucene.queries.mlt.MoreLikeThis;
@@ -71,7 +70,7 @@ public final class MLTConfig {
   }
 
   private MLTConfig(Builder builder) {
-    this.fields = Collections.unmodifiableList(builder.fields);
+    this.fields = List.copyOf(builder.fields);
     this.maxDocFreq = builder.maxDocFreq;
     this.minDocFreq = builder.minDocFreq;
     this.minTermFreq = builder.minTermFreq;
