@@ -17,7 +17,6 @@
 
 package org.apache.lucene.luke.models.search;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Locale;
 import java.util.Map;
@@ -173,7 +172,7 @@ public final class QueryParserConfig {
     this.autoGenerateMultiTermSynonymsPhraseQuery = builder.autoGenerateMultiTermSynonymsPhraseQuery;
     this.autoGeneratePhraseQueries = builder.autoGeneratePhraseQueries;
     this.splitOnWhitespace = builder.splitOnWhitespace;
-    this.typeMap = Collections.unmodifiableMap(builder.typeMap);
+    this.typeMap = Map.copyOf(builder.typeMap);
   }
 
   public boolean isUseClassicParser() {
